--- a/components.json
+++ b/components.json
@@ -7,6 +7,7 @@
     "config": "",
     "css": "src/app/globals.css",
     "baseColor": "zinc",
+    "darkMode": "class",
     "cssVariables": true,
     "prefix": ""
   },
